# proviz-elekto

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: builtin_providers.rs  error.rs  lib.rs  models.rs  rate_state.rs  selector.rs  storage.rs  usage_tracker.rs
crates/storage-common/: Cargo.toml
crates/storage-common/src/: lib.rs
crates/storage-pg/: Cargo.toml
crates/storage-pg/src/: lib.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs
crates/storage-sqlite/tests/: selector_integration.rs
docs/: catalog-setup.md  data-model.md  deployment.md  http-api.md  selection-algorithm.md
examples/bash/: populate_group.sh
examples/python/: basic_usage.py  batch_test.py  rotation_test.py
examples/rust/: workflow.sh
providers/deepgram/: brand.json  models.json
providers/elevenlabs/: brand.json  models.json
providers/groq/: brand.json  models.json
providers/mistral/: brand.json  models.json
providers/ovh/: brand.json  models.json
providers/scaleway/: brand.json  models.json
python/: pyproject.toml
python/proviz_elekto/: __init__.py  batch.py  client.py
scripts/: analyze_logs.py  pre-push.sh
server/: Cargo.toml
server/src/: batch.rs  complete.rs  lib.rs  main.rs
server/tests/: complete_integration.rs
