[workspace]
members = [
    "crates/core",
    "crates/storage-common",
    "crates/storage-sqlite",
    "crates/storage-pg",
    "server",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.10.6"
edition = "2021"
authors = ["ProvizElekto Contributors"]
license = "Apache-2.0"
repository = "https://github.com/YOUR_ORG/proviz-elekto"

[workspace.dependencies]
# Core
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1" }

# HTTP client (CLI + Python client example)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Rate limit state
dashmap = "6"

# DB
sqlx = { version = "0.8", features = ["runtime-tokio", "uuid", "chrono"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
dotenvy = "0.15"
