[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "proviz-elekto"
dynamic = ["version"]
description = "Smart LLM model router - auto-starts proviz-server binary, no Docker required"
readme = "../README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["llm", "model-routing", "rate-limit", "ai", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# No runtime dependencies - stdlib only

[project.urls]
Repository = "https://github.com/JustGui/proviz-elekto"
Issues = "https://github.com/JustGui/proviz-elekto/issues"

[tool.maturin]
# Ship the proviz-server binary via the wheel's scripts directory.
# _find_binary() locates it via sysconfig.get_path("scripts") after install.
bindings = "bin"
manifest-path = "../server/Cargo.toml"
python-packages = ["proviz_elekto"]
