[package]
name = "proviz-elekto-storage-pg"
description = "PostgreSQL storage adapter for ProvizElekto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proviz-elekto-core = { path = "../core" }
proviz-elekto-storage-common = { path = "../storage-common" }
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
postgres = { version = "0.19", features = ["with-uuid-1", "with-chrono-0_4"] }
