[package]
name = "proviz-elekto-storage-sqlite"
description = "SQLite storage adapter for ProvizElekto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proviz-elekto-core = { path = "../core" }
proviz-elekto-storage-common = { path = "../storage-common" }
uuid.workspace = true
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled", "uuid", "chrono"] }

[dev-dependencies]
proviz-elekto-core = { path = "../core" }
uuid = { version = "1", features = ["v4"] }
chrono.workspace = true
